force-app/main/default/objects/Price_Method_1__c/Price_Method_1__c.object-meta.xml
<CustomObject>
    <label>TPS Pricing</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TPS Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>