force-app/main/default/objects/Price_Method_1__c/fields/Buy_Start__c.field-meta.xml
<CustomField>
    <fullName>Buy_Start__c</fullName>
    <label>Buy Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>