force-app/main/default/objects/Price_Method_1__c/fields/Price_per_500__c.field-meta.xml
<CustomField>
    <fullName>Price_per_500__c</fullName>
    <label>Price per 500</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>