force-app/main/default/objects/Price_Method_1__c/fields/TR_Level__c.field-meta.xml
<CustomField>
    <fullName>TR_Level__c</fullName>
    <label>TR-Level</label>
    <length>25</length>
    <type>Text</type>
</CustomField>